# ml-in-erm

./: .gitignore  main.ipynb  main.py  pyproject.toml  readme.txt  requirements.txt
doc/: plots.py  readme.tex  ref.bib
doc/chap/: deeplearning.tex  intro.tex  sklearn.tex
